# thinking

./: .gitignore  README.md
agent-error-feedback/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
agent-error-feedback/data/: penalty_tracker.json  weight_injection.json
agent-error-feedback/examples/: quickstart.sh
agent-error-feedback/protocols/: error-report.md
agent-error-feedback/src/aefs/: __init__.py  config.py  hook_engine.py  pipeline.py  propagator.py
agent-error-feedback/tests/: __init__.py
feedback/: AEFS_README.md  ERROR_REPORT_PROTOCOL.md  README.md
finish_remind/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
finish_remind/examples/: install.json  simple_hook.py
finish_remind/src/finish_remind/: __init__.py  stop_hook.py
learning-tutor/: README.md
learning-tutor/agents/: studyera.md  tutor.md
learning-tutor/methodology/: 01-teaching-rules.md  02-concept-template.md  03-interaction-flow.md
