[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aefs"
version = "1.0.0"
description = "AI Agent Error Feedback System — 四方分析 × 惩罚机制 × 质量门禁 × 知识注入闭环"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["agent", "llm", "error-analysis", "quality-gate", "claude"]

[project.urls]
Repository = "https://github.com/zhsc-lab/thinking"
