[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finish-remind"
version = "2.0.0"
description = "Claude Code 任务完成提示音 + 邮件通知 Hook"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zhsc-lab", email = "zhsc1622@163.com"},
]
keywords = ["claude-code", "hook", "notification", "sound", "email"]

[project.urls]
Homepage = "https://github.com/zhsc-lab/thinking/tree/main/finish_remind"
Source = "https://github.com/zhsc-lab/thinking"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
